--- a/TextChecker/MainWindow.xaml
+++ b/TextChecker/MainWindow.xaml
@@ -3,9 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TextChecker"
+        xmlns:local="clr-namespace:TextChecker.Viewmodels"
         mc:Ignorable="d"
         Title="Text Checker" Height="450" Width="800">
+    <Window.DataContext>
+        <local:MainViewModel />
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
@@ -19,11 +22,24 @@
         </Grid>
 
         <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
 
+            <Label Grid.Column="0" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center">Text einfügen:</Label>
+            <TextBox Grid.Column="1" Margin="8" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Text="{Binding TextInput, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <Label Grid.Column="2" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center" Content="{Binding ResultOutput}"></Label>
         </Grid>
 
         <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="5*" />
+            </Grid.ColumnDefinitions>
 
+            <Button Grid.Column="0" Margin="8" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Command="{Binding ExecuteCheckPalindrome}">Check Palindrome</Button>
         </Grid>
     </Grid>
 </Window>
