--- a/TextChecker/Views/ShellView.xaml
+++ b/TextChecker/Views/ShellView.xaml
@@ -1,14 +1,11 @@
-﻿<Window x:Class="TextChecker.MainWindow"
+﻿<Window x:Class="TextChecker.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TextChecker.Viewmodels"
+        xmlns:local="clr-namespace:TextChecker.Views"
         mc:Ignorable="d"
-        Title="Text Checker" Height="450" Width="800">
-    <Window.DataContext>
-        <local:MainViewModel />
-    </Window.DataContext>
+        Title="ShellView" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
@@ -17,9 +14,8 @@
             <RowDefinition Height="7*" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
-            <Label FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center">Text Checker</Label>
-        </Grid>
+        <Label Grid.Row="0" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center">Text Checker</Label>
+
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -29,8 +25,8 @@
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center">Text einfügen:</Label>
-            <TextBox Grid.Column="1" Margin="8" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Text="{Binding TextInput, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-            <Label Grid.Column="2" FontSize="14" VerticalAlignment="Center" HorizontalAlignment="Center" Content="{Binding ResultOutput}"></Label>
+            <TextBox x:Name="TextInput" Grid.Column="1" Margin="8" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+            <TextBlock x:Name="ResultOutput"  Grid.Column="2" FontSize="14" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
         </Grid>
 
         <Grid Grid.Row="2">
@@ -39,7 +35,7 @@
                 <ColumnDefinition Width="5*" />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Margin="8" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Command="{Binding ExecuteCheckPalindrome}">Check Palindrome</Button>
+            <Button x:Name="CheckPalindrome" Grid.Column="0" Margin="8" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">Check Palindrome</Button>
         </Grid>
     </Grid>
 </Window>
